...
                                    <constraint firstAttribute="height" constant="60" id="Zo6-1D-KYw"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="288-Cz-rVz">
                                <rect key="frame" x="16" y="612" width="343" height="48"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="72F-FJ-pvQ"/>
                                    <constraint firstAttribute="width" constant="343" id="ZXz-Dk-dZg"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Iu5-zT-CZr">
                                                    <rect key="frame" x="309" y="48" width="75" height="35"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="likeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="UF3-gb-rtY"/>
                                                        <constraint firstAttribute="width" constant="44" id="jbg-w1-NXY"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" title="Like Button" image="Active"/>
...
                                <connections>
                                    <outlet property="delegate" destination="QHo-Pj-n5P" id="w1h-rB-wI4"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IJ0-Ek-SD6" userLabel="BackButton">
                                <rect key="frame" x="9" y="67" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="navBackButtonWhite"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="24" id="FCR-xu-GQD"/>
                                    <constraint firstAttribute="height" constant="24" id="nL1-Pb-7NF"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" image="chevron.backward"/>
...
